# tree-sitter-satysfi

./: Cargo.toml  README.md  grammar.js  package.json
bindings/node/: index.js
bindings/rust/: errors.rs  lib.rs  main.rs  syntax.rs
bindings/rust/syntax/: ast.rs  green.rs  red.rs
queries/: highlights.scm  indents.scm  matchup.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: literals.txt
