[package]
name = "tree_sitter_satysfi"
description = "SATySFi grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "satysfi"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/monaqa/tree-sitter-satysfi"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[[bin]]
name = "tree-sitter-satysfi"
path = "bindings/rust/main.rs"

[dependencies]
anyhow = "1.0.43"
structopt = "0.3.22"
tree-sitter = "*"

[build-dependencies]
cc = "1.0"
