[package]
name = "tree-sitter-satysfi"
description = "SATySFi grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "satysfi"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-satysfi"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[[bin]]
name = "tree-sitter-satysfi"
path = "bindings/rust/main.rs"

[dependencies]
anyhow = "1.0.57"
itertools = "0.10.3"
thiserror = "1.0.31"
tree-sitter = "~0.20.0"

[build-dependencies]
cc = "1.0"
